[package]
name = "polymarket-bridge-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ['derive'] }
serde_html_form = "0.4.0"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
